--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,9 @@ dist.jar=${dist.dir}/AudioVideoPlayer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gstreamer-java-1.6.jar=/home/chandra/Downloads/gstreamer-java-1.6.jar
-file.reference.jna-4.1.0.jar=/home/chandra/Downloads/jna-4.1.0.jar
-file.reference.jna-platform-4.1.0.jar=/home/chandra/Downloads/jna-platform-4.1.0.jar
+file.reference.gstreamer-java-1.6.jar=lib/gstreamer-java-1.6.jar
+file.reference.jna-4.1.0.jar=lib/jna-4.1.0.jar
+file.reference.jna-platform-4.1.0.jar=lib/jna-platform-4.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
